== Changelog ==

* 已知问题：设置盒子链接，图标框修改旋转失效。

= 1.0.0 - 2024-06-07 =

* 新增 : 标题(Heading)鼠标悬停颜色控件
* 新增 : 标题(Heading)鼠标悬停过度时长控件
* 新增 : 图片(Image) 增加 溢出 选项(实现动画裁切效果)
* 新增 : 图片(Image) 增加 比例 选项(设定图像外框的比例)
* 新增 : 图标框(Icon Box) 增加图标、标题、描述悬停样式(悬停盒子触发)
* 新增 : 图标框(Icon Box) 增加盒子链接，外层嵌套
* 新增 : [Pro] 帖子内容(Post Content) 增加H1-H6控件 强制覆盖站点设置(Site Settings)
* 删除 : 按钮(Button)类型选项