@@ -5,7 +5,7 @@
 
 ## 注意事项
 
-本插件可能有很多
+本插件可能有很多不兼容性
 
 ```
 开发当前环境如下:
