@@ -1,6 +1,10 @@
 == Changelog ==
 
 * 已知问题：设置盒子链接，图标框修改旋转失效。
+* 已知问题：设背景动画只在前端生效，编辑器环境需要刷新，原因是缺少 js模板字符串(不会写) inject.php:28。
+* TODO1: 增加按钮背景缩放 倾斜滑动 旋转滑动 边框动画等
+* TODO2: 修改搜索框，产品类型字段 woocommerce的
+
 
 = 1.0.0 - 2024-06-07 =
 
@@ -11,4 +15,5 @@
 * 新增 : 图标框(Icon Box) 增加图标、标题、描述悬停样式(悬停盒子触发)
 * 新增 : 图标框(Icon Box) 增加盒子链接，外层嵌套
 * 新增 : [Pro] 帖子内容(Post Content) 增加H1-H6控件 强制覆盖站点设置(Site Settings)
-* 删除 : 按钮(Button)类型选项
+* 新增 : 按钮(Button) 背景动画控件
+* 删除 : 按钮(Button) 类型选项
